src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>ActualRevenueClosed__c</fullName>
        <label>ActualRevenueClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualUnitsClosed__c</fullName>
        <label>ActualUnitsClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Rating__c</fullName>
        <label>Area_Rating</label>
        <picklist>
            <picklistValues>
                <fullName>500 - 600 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 - 700 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 - 800 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 - 900 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 - 1000 sq.ft</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BudgetInLacs_RatingField__c</fullName>
        <label>BudgetInLacsRating</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than 40 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-60 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-80 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-125 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-175 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176-200 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 200 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 -4 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-6 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-12 crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 12 crore</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CommittedRevenue__c</fullName>
        <label>CommittedRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Configuration_Rating__c</fullName>
        <label>Configuration_Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 BHK</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <label>Construction Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prelaunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for possession</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GRE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GRE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Quarter</label>
        <referenceTo>Quarter__c</referenceTo>
        <relationshipLabel>project</relationshipLabel>
        <relationshipName>project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Email Of sales manager of the project</description>
        <label>Sales Manager Email</label>
        <referenceTo>User</referenceTo>
        <relationshipName>project2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Managers__c</fullName>
        <label>Sales Managers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment Name</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>project</relationshipLabel>
        <relationshipName>project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>project1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Site A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StageOfConstruction_Rating__c</fullName>
        <label>StageOfConstruction_Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>textval__c</fullName>
        <label>textval</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>